@@ -11,11 +11,11 @@ org.freedesktop.dbus.DBusConnection = ERR
 org.freedesktop.dbus.AbstractConnection$1 = ERR
 org.freedesktop.dbus.DBusSignal = ERR
 org.freedesktop.dbus.EfficientQueue = ERR
-org.freedesktop.dbus.Transport = ERR
+org.freedesktop.dbus.Transport = VERBOSE
 org.freedesktop.dbus.Transport$SASL = ERR
 org.freedesktop.dbus.Transport$SASL$Command = ERR
 org.freedesktop.dbus.Marshalling = ERR
-org.freedesktop.dbus.BusAddress = ERR
+org.freedesktop.dbus.BusAddress = VERBOSE
 org.freedesktop.dbus.RemoteInvocationHandler = ERR
 org.freedesktop.dbus.test.cross_test_client = ERR;
 org.freedesktop.dbus.bin.DBusDaemon = VERBOSE
